--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,11 @@
 
 button {
    cursor: pointer;
-   outline: none;
+}
+
+:focus-visible {
+   outline: 2px solid var(--color-mainPurple);
+   outline-offset: 4px;
 }
 
 @theme {
